--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'com.google.dagger.hilt.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -41,20 +43,30 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
+    //retro
     implementation'com.squareup.retrofit2:retrofit:2.9.0'
     implementation'com.squareup.retrofit2:converter-gson:2.9.0'
 
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
+    //nav
     implementation 'androidx.navigation:navigation-fragment-ktx:2.5.1'
     implementation 'androidx.navigation:navigation-ui-ktx:2.5.1'
+    implementation 'com.google.android.gms:play-services-cast-framework:20.0.0'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
 
     implementation "androidx.viewpager2:viewpager2:view_pager_version"
 
     implementation 'com.airbnb.android:lottie:3.4.0'
 
     implementation("com.tbuonomo:dotsindicator:4.3")
+
+    //hilt
+    implementation 'com.google.dagger:hilt-android:2.43.2'
+    kapt 'com.google.dagger:hilt-compiler:2.43.2'
+
 }
